<resources>
    <string name="app_name">lab3</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="size">TextSize: 22</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sans">SANSSERIF</string>
    <string name="serif">SERIF</string>
    <string name="monospace">MONOSPACE</string>
    <string name="edit">Форматируемый текст</string>
</resources>