<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <Button
            android:id="@+id/button_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sans" />

        <Button
            android:id="@+id/button_serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serif" />

        <Button
            android:id="@+id/button_monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monospace" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit" />



</LinearLayout>